Fixed Fallout 4 categories.

--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -87,9 +87,7 @@
     <Compile Include="Controls\FileSelectionDialog.Designer.cs">
       <DependentUpon>FileSelectionDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controls\FileSystemTreeViewBase.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Controls\FileSystemTreeViewBase.cs" />
     <Compile Include="Controls\FileSystemTreeNode.cs" />
     <Compile Include="Controls\FileSystemTreeView.cs">
       <SubType>Component</SubType>
@@ -162,9 +160,7 @@
     <Compile Include="Controls\ExtendedMessageBox.Designer.cs">
       <DependentUpon>ExtendedMessageBox.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controls\ReorderableListView.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Controls\ReorderableListView.cs" />
     <Compile Include="Controls\RichTextEditor.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -198,9 +194,7 @@
     <Compile Include="Controls\WizardControlDesigner.cs" />
     <Compile Include="Controls\XmlCompletionData.cs" />
     <Compile Include="Controls\XmlCompletionProvider.cs" />
-    <Compile Include="Controls\XmlEditor.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
+    <Compile Include="Controls\XmlEditor.cs" />
     <Compile Include="Controls\XmlFoldingStrategy.cs" />
     <Compile Include="Controls\XmlFormattingStrategy.cs" />
     <Compile Include="Controls\XmlParser.cs" />
