--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -90,9 +90,7 @@
     <Compile Include="Controls\FileSelectionDialog.Designer.cs">
       <DependentUpon>FileSelectionDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controls\FileSystemTreeViewBase.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Controls\FileSystemTreeViewBase.cs" />
     <Compile Include="Controls\FileSystemTreeNode.cs" />
     <Compile Include="Controls\FileSystemTreeView.cs">
       <SubType>Component</SubType>
@@ -165,9 +163,7 @@
     <Compile Include="Controls\ExtendedMessageBox.Designer.cs">
       <DependentUpon>ExtendedMessageBox.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controls\ReorderableListView.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Controls\ReorderableListView.cs" />
     <Compile Include="Controls\RichTextEditor.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -201,9 +197,7 @@
     <Compile Include="Controls\WizardControlDesigner.cs" />
     <Compile Include="Controls\XmlCompletionData.cs" />
     <Compile Include="Controls\XmlCompletionProvider.cs" />
-    <Compile Include="Controls\XmlEditor.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
+    <Compile Include="Controls\XmlEditor.cs" />
     <Compile Include="Controls\XmlFoldingStrategy.cs" />
     <Compile Include="Controls\XmlFormattingStrategy.cs" />
     <Compile Include="Controls\XmlParser.cs" />
@@ -322,7 +316,6 @@
     <None Include="Resources\zoom-fit-best-2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
