Added XCOM 2 Support.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -64,6 +64,8 @@
 			</endpoint>
 			<endpoint address="http://nmm.nexusmods.com/warthunder/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="WTNexusREST">
 			</endpoint>
+			<endpoint address="http://nmm.nexusmods.com/xcom2/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="XCOM2NexusREST">
+			</endpoint>
 		</client>
 	</system.serviceModel>
 	<applicationSettings>
