Added support for Fallout 4 version 1.5 beta or higher. Added new function to the profile submenu "Import profile's load order'. Added disclaimer informing user of the FO4 1.5 changes to plugin management.

--- a/NexusClient/Properties/Settings.settings
+++ b/NexusClient/Properties/Settings.settings
@@ -8,9 +8,9 @@
     <Setting Name="InstalledGamesDetected" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-	<Setting Name="CacheOverhaulSetup" Type="System.Boolean" Scope="User">
-	 <Value Profile="(Default)">False</Value>
-	</Setting>
+    <Setting Name="CacheOverhaulSetup" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
     <Setting Name="RememberedGameMode" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
@@ -220,6 +220,9 @@
 &lt;PerGameModeSettingsOfBoolean /&gt;</Value>
     </Setting>
     <Setting Name="ShowAlphaDisclaimer" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="ShowFallout4UpgradeDisclaimer" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
