Fixed several mod update issues
Fixed several issues preventing NMM from properly retrieving and saving
updated mod info.
Added new setting to the General tab where the user can set whether NMM
should manage the mod name or leave it as it is.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -200,6 +200,12 @@
    <setting name="ForceHardLinks" serializeAs="String">
     <value>True</value>
    </setting>
+   <setting name="ShowAlphaDisclaimer" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="ShowFallout4UpgradeDisclaimer" serializeAs="String">
+    <value>True</value>
+   </setting>
    <setting name="ExecutablePaths" serializeAs="Xml">
     <value>
      <PerGameModeSettingsOfString />
@@ -316,10 +322,7 @@
      <PerGameModeSettingsOfBoolean />
     </value>
    </setting>
-   <setting name="ShowAlphaDisclaimer" serializeAs="String">
-    <value>True</value>
-   </setting>
-   <setting name="ShowFallout4UpgradeDisclaimer" serializeAs="String">
+   <setting name="OverrideLocalModNames" serializeAs="String">
     <value>True</value>
    </setting>
   </Nexus.Client.Properties.Settings>
