[#132652735] [Partial] Base Support for Skyrim SE
Adding basic support for Skyrim Special Edition.
TODO:
1. Make sure the Documents/MyGames folder is SkyrimSE
2. Make sure the .ini files SkyrimSE and not just Skyrim in their names
3. Retrieve the Steam Game ID

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -36,6 +36,8 @@
 			</endpoint>
 			<endpoint address="http://nmm.nexusmods.com/skyrim/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="SKYRIMNexusREST">
 			</endpoint>
+			<endpoint address="http://nmm.nexusmods.com/skyrimse/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="SKYRIMSENexusREST">
+			</endpoint>
 			<endpoint address="http://nmm.nexusmods.com/worldoftanks/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="WOTNexusREST">
 			</endpoint>
 			<endpoint address="http://nmm.nexusmods.com/grimrock/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="LOGNexusREST">
