[#132652735] [Partial] Skyrim SE BSA Warning
Added warning message for BSA files, also added an application setting
to make sure the message is shown only once during the first mod
install.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -335,6 +335,9 @@
      <PerGameModeSettingsOfBoolean />
     </value>
    </setting>
+   <setting name="SkyrimSEFirstInstallWarning" serializeAs="String">
+    <value>False</value>
+   </setting>
   </Nexus.Client.Properties.Settings>
 	</userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
