[#133310771] [Complete] Skyrim SE Support Fixed
Fixed several issues with the Skyrim SE support.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -36,7 +36,7 @@
 			</endpoint>
 			<endpoint address="http://nmm.nexusmods.com/skyrim/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="SKYRIMNexusREST">
 			</endpoint>
-			<endpoint address="http://nmm.nexusmods.com/skyrimse/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="SKYRIMSENexusREST">
+			<endpoint address="http://nmm.nexusmods.com/skyrimspecialedition/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="SKYRIMSENexusREST">
 			</endpoint>
 			<endpoint address="http://nmm.nexusmods.com/worldoftanks/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="WOTNexusREST">
 			</endpoint>
