--- a/Witcher2/Witcher2.csproj
+++ b/Witcher2/Witcher2.csproj
@@ -120,6 +120,9 @@
       <DependentUpon>GeneralSettingsPage.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="SetupForm.resx">
+      <DependentUpon>SetupForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Categories.xml" />
