Endpoint config and settings

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -70,6 +70,8 @@
 			</endpoint>
 			<endpoint address="http://nmm.nexusmods.com/nomanssky/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="NMSNexusREST">
 			</endpoint>
+      <endpoint address="http://nmm.nexusmods.com/witcher/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="W1NexusREST">
+      </endpoint>
 		</client>
 	</system.serviceModel>
 	<applicationSettings>
