--- a/NexusClient.Interface/NexusClient.Interface.csproj
+++ b/NexusClient.Interface/NexusClient.Interface.csproj
@@ -76,6 +76,12 @@
     <Compile Include="BackgroundTasks\UI\ProgressDialog.Designer.cs">
       <DependentUpon>ProgressDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="BackgroundTasks\UI\ProgressOverlay.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="BackgroundTasks\UI\ProgressOverlay.Designer.cs">
+      <DependentUpon>ProgressOverlay.cs</DependentUpon>
+    </Compile>
     <Compile Include="PluginManagement\OrderLog\IPluginOrderLog.cs" />
     <Compile Include="UI\Delegates.cs" />
     <Compile Include="UI\IView.cs" />
@@ -132,6 +138,9 @@
     <EmbeddedResource Include="BackgroundTasks\UI\ProgressDialog.resx">
       <DependentUpon>ProgressDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BackgroundTasks\UI\ProgressOverlay.resx">
+      <DependentUpon>ProgressOverlay.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
