--- a/Fallout4VR.CSharpScript/Fallout4VR.CSharpScript.csproj
+++ b/Fallout4VR.CSharpScript/Fallout4VR.CSharpScript.csproj
@@ -84,4 +84,10 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="AfterBuild">
+    <ItemGroup>
+      <FilesToCopy Include="$(TargetDir)$(TargetName)*.dll" />
+    </ItemGroup>
+    <Copy SourceFiles="@(FilesToCopy)" DestinationFolder="$(SolutionDir)$(OutDir)GameModes\" SkipUnchangedFiles="true" />
+  </Target>
 </Project>
