--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -91,9 +91,12 @@
       <item key="Bug Report How To">
        <string>http://forums.nexusmods.com/index.php?/topic/460590-reporting-bugs/</string>
       </item>
-      <item key="Report a Bug">
+      <item key="Report a (NMM) Bug">
        <string>https://github.com/Nexus-Mods/Nexus-Mod-Manager/issues</string>
       </item>
+       <item key="Report a (FO4VR) Bug">
+         <string>https://www.reddit.com/r/fo4vr/comments/7pe99g/fo4vr_support_in_nmm_a_hack/</string>
+       </item>
      </KeyedSettingsOfString>
     </value>
    </setting>
