--- a/Game Modes/Fallout4.XmlScript/Fallout4.XmlScript.csproj
+++ b/Game Modes/Fallout4.XmlScript/Fallout4.XmlScript.csproj
@@ -105,6 +105,18 @@
       <Name>XmlScript</Name>
       <Private>False</Private>
     </ProjectReference>
+    <ProjectReference Include="..\Fallout3\Fallout3.csproj">
+      <Project>{211400c3-e73e-4eba-a9c7-9900df9e7719}</Project>
+      <Name>Fallout3</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Fallout4\Fallout4.csproj">
+      <Project>{90b15f92-e808-4e48-a4d7-bf2551959145}</Project>
+      <Name>Fallout4</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GamebryoBase\GamebryoBase.csproj">
+      <Project>{0055fb79-3587-486e-a87e-70304a61d7a4}</Project>
+      <Name>GamebryoBase</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Antlr3.Runtime, Version=3.4.1.9004, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
