--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -25,30 +25,55 @@
 			</webHttpBinding>
 		</bindings>
 		<client>
+			<endpoint address="https://legacy-api.nexusmods.com/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="GatekeeperNexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/oblivion/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="OBNexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/morrowind/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="MWNexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/newvegas/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="FONVNexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/fallout3/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="FO3NexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/fallout4/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="FO4NexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/skyrim/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="SKYRIMNexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/skyrimspecialedition/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="SKYRIMSENexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/worldoftanks/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="WOTNexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/grimrock/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="LOGNexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/darksouls/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="DSNexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/darksouls2/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="DS2NexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/dragonage/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="DAONexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/dragonage2/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="DA2NexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/dragonsdogma/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="DDDANexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/witcher2/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="W2NexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/witcher3/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="W3NexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/xrebirth/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="XRNexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/elderscrollsonline/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="TESONexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/starbound/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="STARBOUNDNexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/stateofdecay/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="SODNexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/warthunder/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="WTNexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/xcom2/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="XCOM2NexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/nomanssky/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="NMSNexusREST">
 			</endpoint>
+			<endpoint address="https://legacy-api.nexusmods.com/breakingwheel/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="BWNexusREST">
 			</endpoint>
 		</client>
 	</system.serviceModel>
