--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -291,8 +291,8 @@
    </setting>
    <setting name="InstalledGames" serializeAs="Xml">
     <value>
-     <ArrayOfString xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
-      xmlns:xsd="https://www.w3.org/2001/XMLSchema" />
+     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
     </value>
    </setting>
    <setting name="QueuedModsToAdd" serializeAs="Xml">
