Included Supported Tools for Fallout 4 VR, with LOOT improvements as seen in PR #330.

--- a/Fallout4VR/Fallout4VR.csproj
+++ b/Fallout4VR/Fallout4VR.csproj
@@ -51,6 +51,7 @@
     <Compile Include="..\SharedSolutionVersionInfo.Auto.cs">
       <Link>Properties\SharedSolutionVersionInfo.Auto.cs</Link>
     </Compile>
+    <Compile Include="Fallout4VRSupportedTools.cs" />
     <Compile Include="Fallout4VRGameMode.cs" />
     <Compile Include="Fallout4VRGameModeDescriptor.cs" />
     <Compile Include="Fallout4VRGameModeFactory.cs" />
