+ start adding suppport for linux/wine (the linux fs is case-sensitive) + fix issues with filename/resource casing (linux filename/paths are case-sensitive) + fix issues with some referenced assemblies (System.XML is not the same as System.Xml) + fix issue with a couple of UI resources that had an indexed pixel format   ** in UI/Controls/DetailsButton.cs :: PadImage   ** Graphics.FromImage does not support images with an indexed pixel format,   ** they must be in rgb format + NexusClient -- needs to reference AntlrUtil because it needs the assembly in the output folder + fix issue with HtmlLabel under wine (issues with mshtml) + fix null reference in Skyrim/SkyrimLauncher.cs::SetupCommands()   ** an attempt was made to extract an icon and then call .ToBitmap() without checking      if the icon was null

--- a/GamebryoBase/GamebryoBase.csproj
+++ b/GamebryoBase/GamebryoBase.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.XML" />
+    <Reference Include="System.Xml" />
     <Reference Include="WindowsBase">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
