--- a/SkyrimVR/SkyrimVR.csproj
+++ b/SkyrimVR/SkyrimVR.csproj
@@ -43,13 +43,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\AssemblyInformationalVersion.cs" />
+    <Compile Include="..\AssemblyInformationalVersion.cs">
+      <Link>Properties\AssemblyInformationalVersion.cs</Link>
+    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Properties\SharedSolutionVersionInfo.Auto.cs" />
+    <Compile Include="..\SharedSolutionVersionInfo.Auto.cs">
+      <Link>Properties\SharedSolutionVersionInfo.Auto.cs</Link>
+    </Compile>
     <Compile Include="SkyrimVRGameMode.cs" />
     <Compile Include="SkyrimVRGameModeDescriptor.cs" />
     <Compile Include="SkyrimVRGameModeFactory.cs" />
