--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -114,7 +114,7 @@
     <value>False</value>
    </setting>
    <setting name="RememberedGameMode" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="ModCompressionLevel" serializeAs="String">
     <value>Ultra</value>
@@ -156,7 +156,7 @@
     <value>3</value>
    </setting>
    <setting name="LastUpdateCheckDate" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="ModVersionsCheckInterval" serializeAs="String">
     <value>3</value>
@@ -165,13 +165,13 @@
     <value>5</value>
    </setting>
    <setting name="LastModVersionsCheckDate" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="TempPathFolder" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="TraceLogFolder" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="ShowExpandedCategories" serializeAs="String">
     <value>False</value>
@@ -216,7 +216,7 @@
     <value>True</value>
    </setting>
    <setting name="LastCheckedMissingDownloadID" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="ShowFallout4UpgradeDisclaimer" serializeAs="String">
     <value>True</value>
@@ -226,118 +226,117 @@
    </setting>
    <setting name="ExecutablePaths" serializeAs="Xml">
     <value>
-     <PerGameModeSettingsOfString />
+     <PerGameModeSettingsOfString/>
     </value>
    </setting>
    <setting name="InstallationPaths" serializeAs="Xml">
     <value>
-     <PerGameModeSettingsOfString />
+     <PerGameModeSettingsOfString/>
     </value>
    </setting>
    <setting name="CompletedSetup" serializeAs="Xml">
     <value>
-     <PerGameModeSettingsOfBoolean />
+     <PerGameModeSettingsOfBoolean/>
     </value>
    </setting>
    <setting name="ModFolder" serializeAs="Xml">
     <value>
-     <PerGameModeSettingsOfString />
+     <PerGameModeSettingsOfString/>
     </value>
    </setting>
    <setting name="CustomGameModeSettings" serializeAs="Xml">
     <value>
-     <PerGameModeSettingsOfPerGameModeSettingsOfObject />
+     <PerGameModeSettingsOfPerGameModeSettingsOfObject/>
     </value>
    </setting>
    <setting name="InstallInfoFolder" serializeAs="Xml">
     <value>
-     <PerGameModeSettingsOfString />
+     <PerGameModeSettingsOfString/>
     </value>
    </setting>
    <setting name="DockPanelLayouts" serializeAs="Xml">
     <value>
-     <KeyedSettingsOfString />
+     <KeyedSettingsOfString/>
     </value>
    </setting>
    <setting name="CustomLaunchCommands" serializeAs="Xml">
     <value>
-     <PerGameModeSettingsOfString />
+     <PerGameModeSettingsOfString/>
     </value>
    </setting>
    <setting name="CustomLaunchCommandArguments" serializeAs="Xml">
     <value>
-     <PerGameModeSettingsOfString />
+     <PerGameModeSettingsOfString/>
     </value>
    </setting>
    <setting name="SelectedLaunchCommands" serializeAs="Xml">
     <value>
-     <PerGameModeSettingsOfString />
+     <PerGameModeSettingsOfString/>
     </value>
    </setting>
    <setting name="RepositoryUsernames" serializeAs="Xml">
     <value>
-     <KeyedSettingsOfString />
+     <KeyedSettingsOfString/>
     </value>
    </setting>
    <setting name="RepositoryAuthenticationTokens" serializeAs="Xml">
     <value>
-     <KeyedSettingsOfKeyedSettingsOfString />
+     <KeyedSettingsOfKeyedSettingsOfString/>
     </value>
    </setting>
    <setting name="DelayedSettings" serializeAs="Xml">
     <value>
-     <PerGameModeSettingsOfKeyedSettingsOfString />
+     <PerGameModeSettingsOfKeyedSettingsOfString/>
     </value>
    </setting>
    <setting name="InstalledGames" serializeAs="Xml">
     <value>
-     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"/>
     </value>
    </setting>
    <setting name="QueuedModsToAdd" serializeAs="Xml">
     <value>
-     <PerGameModeSettingsOfKeyedSettingsOfAddModDescriptor />
+     <PerGameModeSettingsOfKeyedSettingsOfAddModDescriptor/>
     </value>
    </setting>
    <setting name="WindowPositions" serializeAs="Xml">
     <value>
-     <WindowPositions />
+     <WindowPositions/>
     </value>
    </setting>
    <setting name="ColumnWidths" serializeAs="Xml">
     <value>
-     <ColumnWidths />
+     <ColumnWidths/>
     </value>
    </setting>
    <setting name="SplitterSizes" serializeAs="Xml">
     <value>
-     <SplitterSizes />
+     <SplitterSizes/>
     </value>
    </setting>
    <setting name="ToolFolder" serializeAs="Xml">
     <value>
-     <PerGameModeSettingsOfString />
+     <PerGameModeSettingsOfString/>
     </value>
    </setting>
    <setting name="SupportedTools" serializeAs="Xml">
     <value>
-     <PerGameModeSettingsOfKeyedSettingsOfString />
+     <PerGameModeSettingsOfKeyedSettingsOfString/>
     </value>
    </setting>
    <setting name="VirtualFolder" serializeAs="Xml">
     <value>
-     <PerGameModeSettingsOfString />
+     <PerGameModeSettingsOfString/>
     </value>
    </setting>
    <setting name="HDLinkFolder" serializeAs="Xml">
     <value>
-     <PerGameModeSettingsOfString />
+     <PerGameModeSettingsOfString/>
     </value>
    </setting>
    <setting name="MultiHDInstall" serializeAs="Xml">
     <value>
-     <PerGameModeSettingsOfBoolean />
+     <PerGameModeSettingsOfBoolean/>
     </value>
    </setting>
    <setting name="SkyrimSEFirstInstallWarning" serializeAs="String">
@@ -345,4 +344,4 @@
    </setting>
   </Nexus.Client.Properties.Settings>
 	</userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/></startup></configuration>
