--- a/Game Modes/Fallout4VR/Fallout4VR.csproj
+++ b/Game Modes/Fallout4VR/Fallout4VR.csproj
@@ -18,7 +18,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\..\Stage\Debug\GameModes\</OutputPath>
+    <IntermediateOutputPath>..\..\Stage\obj\Debug\</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -27,7 +28,8 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\Stage\Release\GameModes\</OutputPath>
+    <IntermediateOutputPath>..\..\Stage\obj\Release\</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -45,10 +47,10 @@
     <Content Include="Resources\fallout4vr_logo.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\AssemblyInformationalVersion.cs">
+    <Compile Include="..\..\AssemblyInformationalVersion.cs">
       <Link>Properties\AssemblyInformationalVersion.cs</Link>
     </Compile>
-    <Compile Include="..\SharedSolutionVersionInfo.Auto.cs">
+    <Compile Include="..\..\SharedSolutionVersionInfo.Auto.cs">
       <Link>Properties\SharedSolutionVersionInfo.Auto.cs</Link>
     </Compile>
     <Compile Include="Fallout4VRSupportedTools.cs" />
@@ -72,37 +74,45 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Commanding\Commanding.csproj">
+    <ProjectReference Include="..\..\Commanding\Commanding.csproj">
       <Project>{1732bb96-1f74-4b99-82d6-4d1239c9d36a}</Project>
       <Name>Commanding</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\Fallout3\Fallout3.csproj">
       <Project>{211400c3-e73e-4eba-a9c7-9900df9e7719}</Project>
       <Name>Fallout3</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\Fallout4\Fallout4.csproj">
       <Project>{90b15f92-e808-4e48-a4d7-bf2551959145}</Project>
       <Name>Fallout4</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\GamebryoBase\GamebryoBase.csproj">
       <Project>{0055fb79-3587-486e-a87e-70304a61d7a4}</Project>
       <Name>GamebryoBase</Name>
+      <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\ModManager.Interface\ModManager.Interface.csproj">
+    <ProjectReference Include="..\..\ModManager.Interface\ModManager.Interface.csproj">
       <Project>{33f65739-7cfb-4ec1-89ef-8b0b5440ab82}</Project>
       <Name>ModManager.Interface</Name>
+      <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\NexusClient.Interface\NexusClient.Interface.csproj">
+    <ProjectReference Include="..\..\NexusClient.Interface\NexusClient.Interface.csproj">
       <Project>{d586e7d8-9c8e-48f0-b20c-31a52b37e9d3}</Project>
       <Name>NexusClient.Interface</Name>
+      <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\UI\UI.csproj">
+    <ProjectReference Include="..\..\UI\UI.csproj">
       <Project>{5edd4e37-b8f3-403d-a2e9-aff31b21a236}</Project>
       <Name>UI</Name>
+      <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\Util\Util.csproj">
+    <ProjectReference Include="..\..\Util\Util.csproj">
       <Project>{44caa655-38c2-4ca2-ba68-a8d5c44b169d}</Project>
       <Name>Util</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -112,10 +122,4 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Target Name="AfterBuild">
-    <ItemGroup>
-      <FilesToCopy Include="$(TargetDir)$(TargetName)*.dll" />
-    </ItemGroup>
-    <Copy SourceFiles="@(FilesToCopy)" DestinationFolder="$(SolutionDir)$(OutDir)GameModes\" SkipUnchangedFiles="true" />
-  </Target>
 </Project>
