--- a/Game Modes/SkyrimVR/SkyrimVR.csproj
+++ b/Game Modes/SkyrimVR/SkyrimVR.csproj
@@ -16,7 +16,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\..\Stage\Debug\GameModes\</OutputPath>
+    <IntermediateOutputPath>..\..\Stage\obj\Debug\</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -24,7 +25,8 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\Stage\Release\GameModes\</OutputPath>
+    <IntermediateOutputPath>..\..\Stage\obj\Release\</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -43,7 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="..\AssemblyInformationalVersion.cs">
+    <Compile Include="..\..\AssemblyInformationalVersion.cs">
       <Link>Properties\AssemblyInformationalVersion.cs</Link>
     </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
@@ -51,7 +53,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="..\SharedSolutionVersionInfo.Auto.cs">
+    <Compile Include="..\..\SharedSolutionVersionInfo.Auto.cs">
       <Link>Properties\SharedSolutionVersionInfo.Auto.cs</Link>
     </Compile>
     <Compile Include="SkyrimVRGameMode.cs" />
@@ -78,41 +80,50 @@
     <Content Include="Resources\skyrimvr_logo.ico" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Commanding\Commanding.csproj">
+    <ProjectReference Include="..\..\Commanding\Commanding.csproj">
       <Project>{1732BB96-1F74-4B99-82D6-4D1239C9D36A}</Project>
       <Name>Commanding</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\Fallout3\Fallout3.csproj">
       <Project>{211400C3-E73E-4EBA-A9C7-9900DF9E7719}</Project>
       <Name>Fallout3</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\GamebryoBase\GamebryoBase.csproj">
       <Project>{0055fb79-3587-486e-a87e-70304a61d7a4}</Project>
       <Name>GamebryoBase</Name>
+      <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\ModManager.Interface\ModManager.Interface.csproj">
+    <ProjectReference Include="..\..\ModManager.Interface\ModManager.Interface.csproj">
       <Project>{33F65739-7CFB-4EC1-89EF-8B0B5440AB82}</Project>
       <Name>ModManager.Interface</Name>
+      <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\NexusClient.Interface\NexusClient.Interface.csproj">
+    <ProjectReference Include="..\..\NexusClient.Interface\NexusClient.Interface.csproj">
       <Project>{D586E7D8-9C8E-48F0-B20C-31A52B37E9D3}</Project>
       <Name>NexusClient.Interface</Name>
+      <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\NexusClient\NexusClient.csproj">
+    <ProjectReference Include="..\..\NexusClient\NexusClient.csproj">
       <Project>{579b8f56-49f6-4b9d-8013-e11f69e5308c}</Project>
       <Name>NexusClient</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\SkyrimSE\SkyrimSE.csproj">
       <Project>{c178b6ca-f72d-4af3-9797-baeba896ad09}</Project>
       <Name>SkyrimSE</Name>
+      <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\UI\UI.csproj">
+    <ProjectReference Include="..\..\UI\UI.csproj">
       <Project>{5edd4e37-b8f3-403d-a2e9-aff31b21a236}</Project>
       <Name>UI</Name>
+      <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\Util\Util.csproj">
+    <ProjectReference Include="..\..\Util\Util.csproj">
       <Project>{44CAA655-38C2-4CA2-BA68-A8D5C44B169D}</Project>
       <Name>Util</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
@@ -123,10 +134,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <Target Name="AfterBuild">
-    <ItemGroup>
-      <FilesToCopy Include="$(TargetDir)$(TargetName)*.dll" />
-    </ItemGroup>
-    <Copy SourceFiles="@(FilesToCopy)" DestinationFolder="$(SolutionDir)$(OutDir)GameModes\" SkipUnchangedFiles="true" />
-  </Target>
 </Project>
