Moved "Nexus.Client.Interface.ProgrammeData" to "Util.CommonData", to make the version number accessible from all projects.
Includes moving some references around, and editing used namespaces.

--- a/Game Modes/FalloutNV.CSharpScript/FalloutNV.CSharpScript.csproj
+++ b/Game Modes/FalloutNV.CSharpScript/FalloutNV.CSharpScript.csproj
@@ -66,6 +66,11 @@
       <Name>CSharpScript</Name>
       <Private>False</Private>
     </ProjectReference>
+    <ProjectReference Include="..\..\Util\Util.csproj">
+      <Project>{44caa655-38c2-4ca2-ba68-a8d5c44b169d}</Project>
+      <Name>Util</Name>
+      <Private>False</Private>
+    </ProjectReference>
     <ProjectReference Include="..\Fallout3.CSharpScript\Fallout3.CSharpScript.csproj">
       <Project>{A11C9C68-3133-48BF-BB4D-C0DB2AC1D201}</Project>
       <Name>Fallout3.CSharpScript</Name>
