NMM now checks if NXM urls are associated with NMM, and updates the Settings page accordingly. Broke out URL association functions to their own class.

--- a/NexusClient/NexusClient.csproj
+++ b/NexusClient/NexusClient.csproj
@@ -309,6 +309,7 @@
     </Compile>
     <Compile Include="Settings.cs" />
     <Compile Include="Settings\ShellExtensionUtil.cs" />
+    <Compile Include="Settings\UrlAssociationUtil.cs" />
     <Compile Include="TipsManagement\Balloon.cs">
       <SubType>Form</SubType>
     </Compile>
