--- a/Game Modes/NoMansSky/NoMansSky.csproj
+++ b/Game Modes/NoMansSky/NoMansSky.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Reference Include="SevenZipSharp, Version=0.64.3890.29348, Culture=neutral, PublicKeyToken=20de82c62b055c88, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\SevenZipSharp.dll</HintPath>
+      <HintPath>..\..\Stage\packages\Squid-Box.SevenZipSharp.1.1.91\lib\net45\SevenZipSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
