--- a/Mod Formats/FOMod/FOMod.csproj
+++ b/Mod Formats/FOMod/FOMod.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Reference Include="SevenZipSharp, Version=1.1.91.0, Culture=neutral, PublicKeyToken=c8ff6ba0184838bb, processorArchitecture=MSIL">
       <HintPath>..\..\Stage\packages\Squid-Box.SevenZipSharp.1.1.91\lib\net45\SevenZipSharp.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
